Convert everything to Java 11